--- a/package.json
+++ b/package.json
@@ -30,18 +30,19 @@
     "css-loader": "0.23.1",
     "file-loader": "0.8.5",
     "html-loader": "0.4.3",
+    "html-webpack-plugin": "2.24.1",
+    "node-sass": "3.8.0",
     "postcss-loader": "0.5.1",
     "sass-loader": "1.0.3",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1",
-    "node-sass": "3.8.0"
+    "webpack-dev-server": "1.14.1"
   },
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/webpack/bin/webpack.js --debug --config webpack.config.js",
-    "serve": "./node_modules/.bin/webpack-dev-server --inline --hot --debug --content-base . --config webpack.config.js",
+    "serve": "./node_modules/.bin/webpack-dev-server --inline --hot --debug --config webpack.config.js",
     "dist": "./node_modules/webpack/bin/webpack.js --config webpack.config.js"
   },
   "repository": {
